substrate/frame/support/test/tests/derive_no_bound_ui/default_union.stderr
error: Union type not supported by `derive(DefaultNoBound)`
  --> tests/derive_no_bound_ui/default_union.rs:19:1
   |
19 | union Foo {
   | ^^^^^
